objects/LLC_BI__Pricing_Rate_Component__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__All_In_Rate__c</fullName>
        <description>The system automatically populates this formula field with the sum of the Rate and Spread fields.</description>
        <formula>LLC_BI__Rate__c + LLC_BI__Spread__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The system populates this field with the sum of the Rate and Spread fields.</inlineHelpText>
        <label>All-in Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Applied_Loan_Percentage__c</fullName>
        <defaultValue>1</defaultValue>
        <description>This field is required. It is manually populated. It identifies the percentage of one interest rate that is applied to a loan. If the percentage is less than 100%, additional interest rates must be applied to reach the 100% total.</description>
        <label>Applied Loan Percentage</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Calculated_Monthly_Interest_Rate__c</fullName>
        <description>The system automatically populates this field with a formula to convert the annual interest rate to the calculated monthly interest rate when the default equation Annual Interest Rate / 12 = Monthly Interest Rate is not applicable. The system uses this field for Rate &amp; Payment Structure calculations if the Monthly_Interest_Rate_Field field on Product Feature contains the value Calculated_Monthly_Interest_Rate. This field is not editable.</description>
        <formula>EXP((1/12) * LN(1 + LLC_BI__Rate__c + LLC_BI__Spread__c)) - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the formula to calculate the conversion from annual interest rate to monthly interest rate.</inlineHelpText>
        <label>Calculated Monthly Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Comments__c</fullName>
        <description>This field is optional. It is manually populated. The loan officer uses this text field to add comments to the rate.</description>
        <inlineHelpText>Comments</inlineHelpText>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Frequency__c</fullName>
        <description>This field is required. It is manually populated. It indidcates the Payment Frequency for a Pricing Rate Component record.</description>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Frequency_Monthly</fullName>
                    <default>true</default>
                    <label>Frequency_Monthly</label>
                </value>
                <value>
                    <fullName>Frequency_Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Index_Spread_Type__c</fullName>
        <description>The system automatically populates this field based on either a negative or positive Spread value.</description>
        <inlineHelpText>The system auto-populates this field with Add Spread to Index when the Spread value is positive, and Subtract Spread from Index when the Spread value is negative.</inlineHelpText>
        <label>Index Spread Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add Spread to Index</fullName>
                </value>
                <value>
                    <fullName>Subtract Spread from Index</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Index__c</fullName>
        <description>This field is required. It is manually populated. It indicates the Index applied to a Pricing Rate Component record.</description>
        <label>Index</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>COF_mo_1</fullName>
                </value>
                <value>
                    <fullName>COF_mo_2</fullName>
                </value>
                <value>
                    <fullName>COF_mo_3</fullName>
                </value>
                <value>
                    <fullName>COF_mo_4</fullName>
                </value>
                <value>
                    <fullName>COF_mo_5</fullName>
                </value>
                <value>
                    <fullName>COF_mo_6</fullName>
                </value>
                <value>
                    <fullName>COF_Overnight</fullName>
                </value>
                <value>
                    <fullName>Fed_Funds_Current</fullName>
                </value>
                <value>
                    <fullName>Fed_Funds_Prior_Day</fullName>
                </value>
                <value>
                    <fullName>LIBOR_mo_1</fullName>
                </value>
                <value>
                    <fullName>LIBOR_mo_12</fullName>
                </value>
                <value>
                    <fullName>LIBOR_mo_2</fullName>
                </value>
                <value>
                    <fullName>LIBOR_mo_3</fullName>
                </value>
                <value>
                    <fullName>LIBOR_mo_6</fullName>
                </value>
                <value>
                    <fullName>LIBOR_Overnight</fullName>
                </value>
                <value>
                    <fullName>Prime</fullName>
                </value>
                <value>
                    <fullName>Prime_FRED</fullName>
                </value>
                <value>
                    <fullName>Swap_yr_1</fullName>
                </value>
                <value>
                    <fullName>Swap_yr_10</fullName>
                </value>
                <value>
                    <fullName>Swap_yr_2</fullName>
                </value>
                <value>
                    <fullName>Swap_yr_3</fullName>
                </value>
                <value>
                    <fullName>Swap_yr_30</fullName>
                </value>
                <value>
                    <fullName>Swap_yr_4</fullName>
                </value>
                <value>
                    <fullName>Swap_yr_5</fullName>
                </value>
                <value>
                    <fullName>Swap_yr_7</fullName>
                </value>
                <value>
                    <fullName>TCMI_yr_1</fullName>
                </value>
                <value>
                    <fullName>TCMI_yr_10</fullName>
                </value>
                <value>
                    <fullName>TCMI_yr_2</fullName>
                </value>
                <value>
                    <fullName>TCMI_yr_20</fullName>
                </value>
                <value>
                    <fullName>TCMI_yr_3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Rate_Adjustment_Frequency__c</fullName>
        <description>The system automatically populates this optional field. It is used to specify how often an interest rate will be updated.</description>
        <inlineHelpText>The system automatically populates this field. It is used to specify how often an interest rate will be updated.</inlineHelpText>
        <label>Interest Rate Adjustment Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Every Other Week</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semiannually</fullName>
                </value>
                <value>
                    <fullName>Semimonthly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Rate_Type__c</fullName>
        <description>Users populate this optional picklist field to apply the selected interest rate type to a rate stream. By default, it is fixed.</description>
        <inlineHelpText>Select an interest rate type to apply to the rate stream.</inlineHelpText>
        <label>Interest Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                    <default>true</default>
                    <label>Fixed</label>
                </value>
                <value>
                    <fullName>Fixed with Index</fullName>
                </value>
                <value>
                    <fullName>Floating with Index</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Fixed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is required. It is manually populated. It indicates whether or not the payment for a Pricing Rate Component record is fixed.</description>
        <label>Is Fixed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Swap__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It is manually populated. It indicates whether or not a SWAP is included as part of a Pricing Rate Component record.</description>
        <label>Is Swap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Next_Interest_Rate_Change_Date__c</fullName>
        <description>The system automatically populates this optional field with the date of the first interest rate adjustment on the loan.</description>
        <inlineHelpText>The system auto-populates this field with the date of the first interest rate adjustment on the loan.</inlineHelpText>
        <label>Next Interest Rate Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Pricing_Stream__c</fullName>
        <description>This field is required. It is automatically populated. It identifies the Pricing Stream record associated with the Pricing Rate Component record.</description>
        <label>Pricing Stream</label>
        <referenceTo>LLC_BI__Pricing_Stream__c</referenceTo>
        <relationshipLabel>Pricing Rate Components</relationshipLabel>
        <relationshipName>Pricing_Rate_Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Ceiling__c</fullName>
        <description>The system automatically populates this optional percentage field to specify the maximum threshold of a loan&apos;s interest rate for a set period of time.</description>
        <inlineHelpText>The system-populated field displays the maximum possible percentage of a loan&apos;s interest rate for a set period of time.</inlineHelpText>
        <label>Rate Ceiling</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Floor__c</fullName>
        <description>The system automatically populates this optional percentage field to specify the minimum threshold of a loan&apos;s interest rate for a set period of time.</description>
        <inlineHelpText>The system-populated field displays the minimum possible percentage of a loan&apos;s interest rate for a set period of time.</inlineHelpText>
        <label>Rate Floor</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate__c</fullName>
        <description>This field is required. It is manually populated. It indicates the interest rate applied to a Pricing Rate Component record.</description>
        <label>Rate</label>
        <precision>12</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Spread__c</fullName>
        <description>This field is optional. It is manually populated. It indicates the interest spread applied to a variable rate index for a Pricing Rate Component record.</description>
        <label>Spread</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.html</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>cm_Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to LLC_BI__Loan__c object. Populated by a process builder.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Pricing Rate Components</relationshipLabel>
        <relationshipName>Pricing_Rate_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Pricing Rate Component</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Rate Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>